--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
-  "name": "client",
+  "name": "tuition-fixer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
+    "@hookform/resolvers": "^1.1.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.1.2",
+    "@testing-library/user-event": "^12.2.2",
+    "aos": "^2.3.4",
+    "chart.js": "^2.9.4",
+    "firebase": "^7.19.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.12.2",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.0",
+    "react-slick": "^0.27.13",
+    "react-star-ratings": "^2.3.0",
+    "slick-carousel": "^1.8.1",
+    "swr": "^0.5.2",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.6"
   },
   "scripts": {
     "start": "react-scripts start",
